# MathLogic

Task1/: a.out  checker.cpp  checker.h  compile_hw1.bash  good6.in  hw1_main.cpp  node.h  out.txt  parser.cpp  parser.h  token.h
Task2/: CMakeLists.txt  README.md  a.out  axioms_and_assumptions.h  b.out  checker.cpp  checker.h  compile_hw2.bash  compile_parser.bash  good6.in  hw2_main.cpp  in.txt  node.h  out.txt  parser.cpp  parser.h  parser_test.cpp  test_all.bash  test_all_main.cpp  token.h
Task2/proofing_library/: CMakeLists.txt  axioms_and_assumptions.h  checker.cpp  checker.h  line_annotation.h  node.h  parser.cpp  proofer.cpp  proofer.h  string_handler.cpp  string_handler.h  tokens.h
Task2/proofing_library/proof_generation_templates/: last_assumption.txt
Task2/proofing_library/test/: a.out  file_test.cpp
Task3/: CMakeLists.txt  README.md  main.cpp
Task3/proofing_library/: CMakeLists.txt  generator.cpp  generator.h
